<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <!-- Imagen del Pokémon -->
            <ImageView
                android:id="@+id/ivPokemonImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5"/>

            <!-- Nombre del Pokémon -->
            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_pokemon"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPokemonImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:textColor="@color/black"/>

            <!-- Peso y Altura del Pokémon (en una fila, más cerca) -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toEndOf="@+id/ivPokemonImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical">

                <!-- Peso -->
                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Weight_pokemon"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="16dp"/>

                <!-- Altura -->
                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Height_pokemon"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <Button
                android:id="@+id/btnLiberar"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:text="@string/x"
                app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginEnd="8dp"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
